tests/NormalTests/paczka1/fuzzy1/62358758.err
Error in line 4: A197 A595 85,9
Error in line 18: A197 A197 13,8
Error in line 21: 4isqn A595 37,1
Error in line 22: 4isqn S87 47,2
Error in line 28: xwl A197 67,9
Error in line 23: Njk S87 11,9
Error in line 29: kvZem S87 41,3
Error in line 30: xwl S402 26,1
